fix: media sponsors remove general sponsor and align cards

--- a/src/app/components/pages/media-sponsors/media-sponsors.component.scss
+++ b/src/app/components/pages/media-sponsors/media-sponsors.component.scss
@@ -62,6 +62,20 @@
   display: inline-block;
   vertical-align: top;
   padding: 10px;
+
+  ::ng-deep {
+    .card, .sponsor-card-container { 
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+
+    img {
+      height: 80px;
+      width: auto;
+      object-fit: contain;
+    }
+  }
 }
 
 .coming-soon {
